Changes to squid-3.1.15 (28 Aug 2011):

	- Regression fix: vhost and defaultsite causing vport to be ignored
	- Bug #3232: fails to compile with OpenSSL v1.0.0
	- Bug #3222: cache_peer name is not logging on CONNECT
	- Bug #3131: fd_table[fd].closing() assert from ConnStateData::noteMoreBodySpaceAvailable()
	- Bug #3217: "!fd_table[fd].closing()" from ServerStateData::noteMoreBodySpaceAvailable
	- Bug #3213: https sites (CONNECT) not open when using NTLM
	- Bug #3114: Memory leak in SSL certificate verify code
	- Bug #3107: ncsa_auth DES silently truncates passwords to 8 bytes
	- Bug #2662: cf_gen failure when cross compiling
	- Bug #2655: passing wrong the username to the url_rewrite_program
	- Bug #2495: ignore whitespace prefix on config lines
	- Bug #2051: 'default' cache_peer option does not match documentation
	- Bug #1842: Optimize order of tests in peerWouldBePinged() and peerHTTPOkay()
	- Bug #1791: timestampsSet does not validate Date: if server sends very old date
	- Correct parsing of large Gopher indexes
	- Enable negative cacheing on unknown or -1 expiry timestamp
	- Migrate cf_gen tool from C-style to C++
	- ... and several documentation and compiler warning fixes

Changes to squid-3.1.14 (04 Jul 2011):

	- Regression Bug 3261: Could not create a DNS socket and exit

Changes to squid-3.1.13 (01 Jul 2011):

	- Regression Bug 3239: problems with myip/myport upgrade
	- Bug 3153: hung ICAP RESPMOD transactions
	- Update ssl_crtd to use 'OK' status inline with other helpers

Changes to squid-3.1.12.3 (18 Jun 2011):

	- Bug 3236: Port of %oa, %<lp and %<lp and %<la log format options
	- Bug 3214: unexpected read from ssl_crtd
	- Bug 3153: Prevent ICAP RESPMOD transactions getting stuck with the adapted body
	- Fix RADIUS helper resource leak
	- Fix segfault parsing digest auth realm
	- Fix segfault in parse_eol()
	- Fixed bypass of SSL certificate validation errors
	- Warn about myip/myport problems on interception proxies